--- a/build.gradle
+++ b/build.gradle
@@ -16,19 +16,22 @@ repositories {
 }
 
 dependencies {
-    // Указываем версию JUnit, если вы планируете писать тесты
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
+    // библиотека com.codeborne:selenide используется при построении проекта с использованием Selenide
+    testImplementation 'com.codeborne:selenide:6.17.2'
 
-    // Добавляем зависимость Selenide
-    testImplementation 'com.codeborne:selenide:6.6.1' // Используйте последнюю доступную версию Selenide
+    // при реализации проекте с использованием Selenium вместо библиотеки com.codeborne:selenide подключаются
+    // org.seleniumhq.selenium:selenium-java и io.github.bonigarcia:webdrivermanager
+    testImplementation 'io.github.bonigarcia:webdrivermanager:5.7.0'
+    testImplementation 'junit:junit:4.13.1'
+
 }
 
 test {
     useJUnitPlatform()
     // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM (где его подтянет Selenide)
     // свойство selenide.headless используется в проектах на основе Selenide для передачи значения параметра в JVM
-    systemProperty 'selenide.headless', System.getProperty('selenide.headless')
-    // свойство chromeoptions.prefs используется для задания настроек браузера в проектах на основе Selenide, выключаем менеджер паролей
-    systemProperty 'chromeoptions.prefs', System.getProperty('chromeoptions.prefs', "profile.password_manager_leak_detection=false")
+    systemProperty 'selenide.headless', System.getProperty('selenide.headless', 'false') // Добавлено значение по умолчанию 'false'
+    systemProperty 'chromeoptions.prefs', System.getProperty('chromeoptions.prefs', "profile.password_manager_enabled=false") // Изменено на "profile.password_manager_enabled=false"
 }
+
